infrastructure/terraform/alb_target_group.tf
resource "aws_lb_target_group" "bottletube" {
  name     = "bottletube-tg"
  port     = 80
  protocol = "HTTP"
  vpc_id   = aws_vpc.main.id

  health_check {
    path                = "/"
    interval            = 30
    timeout             = 5
    healthy_threshold   = 2
    unhealthy_threshold = 2
  }
}
